fix wave animation on mobile

--- a/sass/layout/_video-header.scss
+++ b/sass/layout/_video-header.scss
@@ -73,7 +73,7 @@
       width:3200px;
       height:80px;
       top: 6rem;
-    background:url(../images/wave-neutal.svg) repeat-x;
+    background:url(../images/wave-neutral.svg) repeat-x;
       -webkit-animation:wave 40s cubic-bezier(.36,.45,.63,.53) infinite;
       animation:wave 40s cubic-bezier(.36,.45,.63,.53) infinite;
     }
